# EEGChallengeNet

./: .gitignore  README.md  pyproject.toml  pytest.ini
examples/: contrastive_eeg2025_mini.sh
scripts/: generate_synthetic.py  run_tests.bat  run_tests.ps1  train_contrastive_eeg.py  train_forecast_csv.py  train_selfdistill_eeg.py  train_two_moons.py
src/: __init__.py  blocks.py  contrastive.py  datasets.py  model.py  revin.py  synthetic.py
tests/: conftest.py  test_minimal.py
